--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,65 @@
 <!doctype html>
-<html lang="en-AU">
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — Comms Black Mobile</title>
-  <meta name="description" content="Contact Comms Black Mobile via Signal." />
-  <link rel="stylesheet" href="styles.css" />
+  
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
+<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+<script defer src="script.js"></script>
+
+  <meta name="description" content="Contact Comms Black Mobile via Signal for privacy and security.">
 </head>
 <body>
-  <div id="site-header"></div>
-  <main class="section container">
+  
+<header>
+  <div class="container header-inner">
+    <a class="brand" href="index.html">
+      <img src="assets/logo.png" alt="Comms Black Mobile logo" class="logo">
+      <span>Comms Black Mobile</span>
+    </a>
+    <nav class="nav desktop-nav" aria-label="Primary">
+      <a href="index.html">Mission</a>
+      <a href="products.html">Products</a>
+      <a href="academy.html">Academy</a>
+      <a href="faqs.html">FAQ’s</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+    <div class="header-actions">
+      <button class="theme-toggle" aria-pressed="false" title="Toggle dark/light" aria-label="Toggle dark or light theme">🌙</button>
+      <button class="hamburger" aria-label="Open menu" aria-controls="mobileMenu" aria-expanded="false">
+        <span></span><span></span><span></span>
+      </button>
+    </div>
+  </div>
+  <div id="mobileMenu" class="mobile-menu" role="dialog" aria-modal="true" hidden>
+    <button class="close-btn" aria-label="Close menu" title="Close menu">&times;</button>
+    <nav class="mobile-nav" aria-label="Mobile Primary">
+      <a href="index.html">Mission</a>
+      <a href="products.html">Products</a>
+      <a href="academy.html">Academy</a>
+      <a href="faqs.html">FAQ’s</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
+</header>
+
+  <main class="container">
+    
     <h1>Contact</h1>
     <p>For privacy and security, we only accept contact via Signal.</p>
     <h2>Signal handle</h2>
-    <p><code>@commsblack.10</code></p>
-    <p><a class="btn" href="https://signal.me/" rel="nofollow noopener">Message on Signal</a></p>
+    <pre>@commsblack.10</pre>
+    <p><a class="btn" href="https://signal.me" target="_blank" rel="noopener">Message on Signal</a></p>
+    
   </main>
-  <div id="site-footer"></div>
-  <script src="js/load.js" defer></script>
-  <script src="js/main.js" defer></script>
+  
+<footer>
+  <div class="container">
+    <p>© 2025 Comms Black Mobile. All rights reserved.</p>
+  </div>
+</footer>
+
 </body>
 </html>
