--- a/faqs.html
+++ b/faqs.html
@@ -36,11 +36,13 @@
   <div id="mobileMenu" class="mobile-menu" role="dialog" aria-modal="true" hidden>
     <button class="close-btn" aria-label="Close menu" title="Close menu">&times;</button>
     <nav class="mobile-nav" aria-label="Mobile Primary">
-      <a href="index.html">Mission</a>
-      <a href="products.html">Products</a>
-      <a href="academy.html">Academy</a>
-      <a href="faqs.html">FAQ’s</a>
-      <a href="contact.html">Contact</a>
+      <ul>
+        <li><a href="index.html">Mission</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="academy.html">Academy</a></li>
+        <li><a href="faqs.html">FAQ’s</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
   </div>
 </header>
