--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Comms Black Mobile — Mission</title>
+  <title>CommsBlack Mobile — Mission</title>
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +9,15 @@
 <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 <script defer src="script.js"></script>
 
-  <meta name="description" content="Private. Secure. Anonymous. Take back control of your communications.">
+  <meta name="description" content="Private. Secure. Anonymous. Speak Freely.">
 </head>
 <body>
   
 <header>
   <div class="container header-inner">
     <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="Comms Black Mobile logo" class="logo">
-      <span>Comms Black Mobile</span>
+      <img src="assets/logo.png" alt="CommsBlack Mobile logo" class="logo">
+      <span>CommsBlack Mobile</span>
     </a>
     <nav class="nav desktop-nav" aria-label="Primary">
       <a href="index.html">Mission</a>
@@ -49,20 +49,29 @@
 
   <main class="container">
     
-    <section class="hero">
-      <h1>Private. Secure. Anonymous.</h1>
-      <p>Our mission is simple: give people back control of their communications — free from surveillance, exploitation, and unnecessary risk.</p>
-      <div class="cta-row">
-        <a class="btn" href="products.html">Explore Products</a>
-        <a class="btn btn-outline" href="academy.html">Learn the Basics</a>
+    <section class="hero hero-split">
+      <div class="hero-copy">
+        <h1>Speak Freely</h1>
+        <div class="cta-row">
+          <a class="btn" href="products.html">Explore Products</a>
+          <a class="btn btn-outline" href="academy.html">Learn the Basics</a>
+        </div>
       </div>
+      <div class="hero-media">
+        <img src="assets/hero-phone.png" alt="GrapheneOS phone — CommsBlack Mobile" />
+      </div>
+    </section>
+
+    <section class="lede">
+      <h2>Private. Secure. Anonymous.</h2>
+      <p>Our mission is simple: give people back control of their communications — free from surveillance, exploitation, and unnecessary risk.</p>
     </section>
     
   </main>
   
 <footer>
   <div class="container">
-    <p>© 2025 Comms Black Mobile. All rights reserved.</p>
+    <p>© 2025 CommsBlack Mobile. All rights reserved.</p>
   </div>
 </footer>
 
