--- a/academy.html
+++ b/academy.html
@@ -1,18 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <title>CommsBlack Academy</title>
-  
+<!doctype html><html lang='en'><head><title>Academy</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+<link rel="manifest" href="manifest.json">
+<link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+<link rel="alternate icon" href="assets/favicon.png" type="image/png">
+<link rel="icon" href="assets/favicon.ico" sizes="any">
+<link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
+<meta name="theme-color" content="#1eb6a6">
 <script defer src="script.js"></script>
-
-  <meta name="description" content="Learn how to secure your communications, protect your privacy, and operate with confidence.">
-</head>
-<body>
-  
+<meta name='description' content='Academy'></head><body>
 <header>
   <div class="container header-inner">
     <a class="brand" href="index.html">
@@ -46,23 +43,10 @@
     </nav>
   </div>
 </header>
-
-  <main class="container">
-    
-    <h1>CommsBlack Academy</h1>
-    <p>Learn how to secure your communications, protect your privacy, and operate with confidence in a digital‑first world.</p>
-    <h2>Core Topics</h2>
-    <details><summary>GrapheneOS Basics</summary><p>GrapheneOS minimizes attack surface and removes bloatware.</p></details>
-    <details><summary>VoIP & Anonymous Numbers</summary><p>Use internet‑based calling and messaging with private numbers.</p></details>
-    <details><summary>Faraday Protection</summary><p>Block wireless signals in transit and storage with Faraday gear.</p></details>
-    
-  </main>
-  
+<main class='container'><h1>Academy</h1><p>Guides and resources.</p></main>
 <footer>
   <div class="container">
     <p>© 2025 CommsBlack Mobile. All rights reserved.</p>
   </div>
 </footer>
-
-</body>
-</html>
+</body></html>
