--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <title>CommsBlack Mobile — Mission</title>
-  
+<!doctype html><html lang='en'><head><title>CommsBlack Mobile — Mission</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+<link rel="manifest" href="manifest.json">
+<link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+<link rel="alternate icon" href="assets/favicon.png" type="image/png">
+<link rel="icon" href="assets/favicon.ico" sizes="any">
+<link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
+<meta name="theme-color" content="#1eb6a6">
 <script defer src="script.js"></script>
-
-  <meta name="description" content="Private. Secure. Anonymous. Speak Freely.">
-</head>
-<body>
-  
+<meta name='description' content='Speak Freely'></head><body>
 <header>
   <div class="container header-inner">
     <a class="brand" href="index.html">
@@ -46,34 +43,17 @@
     </nav>
   </div>
 </header>
-
-  <main class="container">
-    
-    <section class="hero hero-split">
-      <div class="hero-copy">
-        <h1>Speak Freely</h1>
-        <div class="cta-row">
-          <a class="btn" href="products.html">Explore Products</a>
-          <a class="btn btn-outline" href="academy.html">Learn the Basics</a>
-        </div>
-      </div>
-      <div class="hero-media">
-        <img src="assets/hero-phone.png" alt="GrapheneOS phone — CommsBlack Mobile" />
-      </div>
-    </section>
-
-    <section class="lede">
-      <h2>Private. Secure. Anonymous.</h2>
-      <p>Our mission is simple: give people back control of their communications — free from surveillance, exploitation, and unnecessary risk.</p>
-    </section>
-    
-  </main>
-  
+<main class='container'>
+<section class="hero hero-split">
+  <h1 class="hero-title">Speak Freely</h1>
+  <div class="hero-media"><img src="assets/hero-phone.png" alt="phone"></div>
+  <div class="hero-cta cta-row"><a class="btn" href="products.html">Explore Products</a><a class="btn btn-outline" href="academy.html">Learn the Basics</a></div>
+</section>
+<section class="lede"><h2>Private. Secure. Anonymous.</h2><p>Our mission is simple: give people back control of their communications.</p></section>
+</main>
 <footer>
   <div class="container">
     <p>© 2025 CommsBlack Mobile. All rights reserved.</p>
   </div>
 </footer>
-
-</body>
-</html>
+</body></html>
