--- a/404.html
+++ b/404.html
@@ -1,18 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <title>Page Not Found — CommsBlack Mobile</title>
-  
+<!doctype html><html lang='en'><head><title>404</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+<link rel="manifest" href="manifest.json">
+<link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+<link rel="alternate icon" href="assets/favicon.png" type="image/png">
+<link rel="icon" href="assets/favicon.ico" sizes="any">
+<link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
+<meta name="theme-color" content="#1eb6a6">
 <script defer src="script.js"></script>
-
-  <meta name="description" content="404 error page for CommsBlack Mobile.">
-</head>
-<body>
-  
+<meta name='description' content='404'></head><body>
 <header>
   <div class="container header-inner">
     <a class="brand" href="index.html">
@@ -46,16 +43,10 @@
     </nav>
   </div>
 </header>
-
-  <main class="container">
-    <h1>404 — Page Not Found</h1><p>The page you’re looking for doesn’t exist. <a href='index.html'>Return home</a>.</p>
-  </main>
-  
+<main class='container'><h1>404</h1><p>Return <a href='index.html'>home</a>.</p></main>
 <footer>
   <div class="container">
     <p>© 2025 CommsBlack Mobile. All rights reserved.</p>
   </div>
 </footer>
-
-</body>
-</html>
+</body></html>
