--- a/products.html
+++ b/products.html
@@ -1,18 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <title>CommsBlack Mobile — Products</title>
-  
+<!doctype html><html lang='en'><head><title>Products</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+<link rel="manifest" href="manifest.json">
+<link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+<link rel="alternate icon" href="assets/favicon.png" type="image/png">
+<link rel="icon" href="assets/favicon.ico" sizes="any">
+<link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
+<meta name="theme-color" content="#1eb6a6">
 <script defer src="script.js"></script>
-
-  <meta name="description" content="Secure communication kits for privacy & freedom. Choose the kit that fits your lifestyle.">
-</head>
-<body>
-  
+<meta name='description' content='Products'></head><body>
 <header>
   <div class="container header-inner">
     <a class="brand" href="index.html">
@@ -46,78 +43,56 @@
     </nav>
   </div>
 </header>
-
-  <main class="container">
-    
-    <h1>Secure Communication Kits for Privacy & Freedom</h1>
-    <p>From everyday privacy to sovereign global connectivity — choose the kit that fits your lifestyle.</p>
-    <section class="card-grid">
-      <article class="card">
+<main class='container'>
+<h1>Secure Communication Kits</h1>
+<section class="card-grid">
+  <article class="card product" data-price-aud="1400" data-sku="everyday-aussie">
+    <div class="card-inner">
+      <div class="card-front">
         <h2>Everyday Aussie</h2>
         <p class="muted">Privacy made simple</p>
-        <ul>
-          <li>GrapheneOS Pixel 8a</li>
-          <li>Case + privacy screen</li>
-          <li>Small Faraday bag</li>
-          <li>Your own SIM</li>
-          <li>USB‑C cable + 30W charger</li>
-        </ul>
+        <ul><li>GrapheneOS Pixel 8a</li><li>Case + privacy screen</li><li>Faraday bag</li><li>Your own SIM</li></ul>
         <p class="price">$1,400 AUD</p>
-        <a class="btn" href="#checkout">Buy Now</a>
-      </article>
-      <article class="card">
+        <button class="btn buy-btn">Buy Now</button>
+      </div>
+      <div class="card-back">
+        <div class="pay-info">
+          <p>Live XMR price: <strong class="xmr-usd">—</strong> USD</p>
+          <p>Amount (AUD): <strong class="price-aud">—</strong></p>
+          <p>Amount (USD): <strong class="price-usd">—</strong></p>
+          <p>Amount (XMR): <strong class="price-xmr">—</strong></p>
+          <div class="qr-wrap"><img class="qr-img" alt="QR code for Monero payment"></div>
+          <div class="back-actions"><button class="btn btn-outline flip-back">Back</button></div>
+        </div>
+      </div>
+    </div>
+  </article>
+  <article class="card product" data-price-aud="1600" data-sku="anonymous-aussie">
+    <div class="card-inner">
+      <div class="card-front">
         <h2>Anonymous Aussie</h2>
         <p class="muted">Anonymity without compromise</p>
-        <ul>
-          <li>GrapheneOS Pixel 8a</li>
-          <li>Case + privacy screen</li>
-          <li>Small Faraday bag</li>
-          <li>Silent.link eSIM preinstalled</li>
-          <li>Encrypted VoIP app & number</li>
-          <li>USB‑C cable + 30W charger</li>
-        </ul>
+        <ul><li>GrapheneOS Pixel 8a</li><li>eSIM preinstalled</li><li>Encrypted VoIP</li></ul>
         <p class="price">$1,600 AUD</p>
-        <a class="btn" href="#checkout">Buy Now</a>
-      </article>
-      <article class="card">
-        <h2>Operator Aussie</h2>
-        <p class="muted">Air‑gapped security for high‑risk work</p>
-        <ul>
-          <li>GrapheneOS Pixel 8a (airplane mode enforced)</li>
-          <li>Case + privacy screen</li>
-          <li>Large Faraday bag</li>
-          <li>Privacy router</li>
-          <li>Anonymous eSIM via router</li>
-          <li>Encrypted VoIP app & number</li>
-          <li>Ethernet cable + charger</li>
-        </ul>
-        <p class="price">$2,500 AUD</p>
-        <a class="btn" href="#checkout">Buy Now</a>
-      </article>
-      <article class="card">
-        <h2>Sovereign Aussie</h2>
-        <p class="muted">Secure connectivity anywhere on Earth</p>
-        <ul>
-          <li>GrapheneOS Pixel 8a (airplane mode enforced)</li>
-          <li>Case + privacy screen</li>
-          <li>Large Faraday bag</li>
-          <li>Privacy router</li>
-          <li>Anonymous eSIM via router</li>
-          <li>Encrypted VoIP app & number</li>
-          <li>Satellite option</li>
-        </ul>
-        <p class="price">$3,300 AUD</p>
-        <a class="btn" href="#checkout">Buy Now</a>
-      </article>
-    </section>
-    
-  </main>
-  
+        <button class="btn buy-btn">Buy Now</button>
+      </div>
+      <div class="card-back">
+        <div class="pay-info">
+          <p>Live XMR price: <strong class="xmr-usd">—</strong> USD</p>
+          <p>Amount (AUD): <strong class="price-aud">—</strong></p>
+          <p>Amount (USD): <strong class="price-usd">—</strong></p>
+          <p>Amount (XMR): <strong class="price-xmr">—</strong></p>
+          <div class="qr-wrap"><img class="qr-img" alt="QR code for Monero payment"></div>
+          <div class="back-actions"><button class="btn btn-outline flip-back">Back</button></div>
+        </div>
+      </div>
+    </div>
+  </article>
+</section>
+</main>
 <footer>
   <div class="container">
     <p>© 2025 CommsBlack Mobile. All rights reserved.</p>
   </div>
 </footer>
-
-</body>
-</html>
+</body></html>
