--- a/faqs.html
+++ b/faqs.html
@@ -1,4 +1,8 @@
-<!doctype html><html lang='en'><head><title>FAQs</title>
+<!doctype html>
+<html lang="en">
+<head>
+  <title>CommsBlack Mobile — FAQs</title>
+  
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
@@ -9,7 +13,11 @@
 <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
 <meta name="theme-color" content="#1eb6a6">
 <script defer src="script.js"></script>
-<meta name='description' content='FAQ'></head><body>
+
+  <meta name="description" content="FAQs">
+</head>
+<body>
+  
 <header>
   <div class="container header-inner">
     <a class="brand" href="index.html">
@@ -43,10 +51,18 @@
     </nav>
   </div>
 </header>
-<main class='container'><h1>FAQs</h1><p>FAQ content.</p></main>
+
+  <main class="container">
+    
+<h1>FAQs</h1><p>Common questions.</p>
+
+  </main>
+  
 <footer>
   <div class="container">
     <p>© 2025 CommsBlack Mobile. All rights reserved.</p>
   </div>
 </footer>
-</body></html>
+
+</body>
+</html>
